--- a/web/package.json
+++ b/web/package.json
@@ -37,6 +37,8 @@
   },
   "dependencies": {
     "gatsby-image": "^2.0.41",
-    "gatsby-plugin-manifest": "^2.4.30"
+    "gatsby-plugin-manifest": "^2.4.30",
+    "gatsby-plugin-transition-link": "^1.20.2",
+    "gsap": "^3.5.1"
   }
 }
